--- a/style.css
+++ b/style.css
@@ -2,4 +2,68 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
+.menu-container{
+  width: 100%;
+  height: 80px;
+  background: black;
+}
+
+.menu-left, .menu-right{
+  float: left;
+  width: 50%;
+  height: 80px;
+  padding: 25px;
+}
+
+.menu-left{
+
+}
+
+.menu-right{
+  text-align: right;
+}
+
+#myButton{
+  background: red;
+  color: white;
+  padding: 10px;
+  border: 0;
+  margin-left: 15px;
+  font-weight: 700;
+}
+
+input[type=text]{
+  font-size: 25px;
+  width: 35%;
+  border: 2px solid #555;
+  padding-left: 10px;
+  border-radius: 5px;
+}
+
+.container-film{
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+}
+
+.filmList{
+  list-style: none;
+}
+
+.container-all-films{
+  width: 100%;
+  height: 400px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.film-tv{
+  width: 350px;
+  height: 380px;
+  margin: 10px;
 }
