--- a/style.css
+++ b/style.css
@@ -53,13 +53,20 @@ input[type=text]{
   list-style: none;
 }
 
+.wrapper{
+  width: 90%;
+  height: auto;
+  margin: auto;
+}
+
 .container-all-films{
   width: 100%;
   height: 400px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .film-tv{
