--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ input[type=text]{
 }
 
 .wrapper{
-  width: 90%;
-  height: auto;
-  margin: auto;
+  width: 100%;
+  height: 100%;
+  text-align: center;
 }
 
 .container-all-films{
@@ -65,12 +65,12 @@ input[type=text]{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+
 }
 
 .film-tv{
   width: 350px;
   height: auto;
-  margin: 10px;
+  margin: 5px;
 }
