--- a/style.css
+++ b/style.css
@@ -77,8 +77,8 @@ input[type=text]{
 
 .infoFilm{
   display: none;
-  width: 100%; /* 350px */
-  /* height: 100%; /* 520px */
+  width: 100%;
+  height: 517px;
   margin: 5px;
   background: black;
   color: white;
@@ -96,7 +96,7 @@ input[type=text]{
   padding: 10px;
 }
 
-.imgFilm{
-  width: 342px;
-  height: 100%;
+
+.hidden{
+  display: none;
 }
